[package]
authors = ["simdimdim <simdimdim@gmail.com>"]
default-run = "main"
edition = "2018"
name = "pagepal"
resolver = "2"
version = "0.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.vcpkg]
branch = "master"
git = "https://github.com/microsoft/vcpkg"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = {triplet = "x64-windows-static-md"}

[dependencies]
conrod = "0.62.1"
conrod_core = {path = "../conrod/conrod_core"}
conrod_example_shared = {path = "../conrod/backends/conrod_example_shared"}
conrod_piston = {path = "../conrod/backends/conrod_piston"}

http-serde = "1.0.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_with = { version = "1.9.2", features = ["json", "macros"] }

directories-next = "2.0.0"
hentai = "0.2.2"

reqwest = "0.11.3"
select = "0.6.0-alpha.1"

# futures = "0.3.15"
tokio = { version = "1.6.1", features = ["fs", "time", "net", "macros", "rt-multi-thread"] }

[target.'cfg(linux)'.dependencies.sdl2]
features = []
version = "0.34.5"

[target.'cfg(not(linux))'.dependencies.sdl2]
features = ["bundled", "use-vcpkg"]
version = "0.34.5"

[dependencies.piston_window]
default-features = false
version = "0.120.0"

[dependencies.pistoncore-sdl2_window]
git = "https://github.com/PistonDevelopers/sdl2_window"
