[package]
authors = ["simdimdim <simdimdim@gmail.com>"]
default-run = "main"
edition = "2018"
name = "pagepal"
resolver = "2"
version = "0.1.2"

[profile.release]
# debug = true

[package.metadata.vcpkg]
branch = "master"
dependencies = ["sdl2"]
git = "https://github.com/microsoft/vcpkg"
target = {x86_64-pc-windows-msvc = {triplet = "x64-windows-static-md"}}

[dependencies]
conrod = "0.62.1"
conrod_core = {git = "https://github.com/simdimdim/conrod"}
conrod_example_shared = {git = "https://github.com/simdimdim/conrod"}
conrod_piston = {git = "https://github.com/simdimdim/conrod"}
sdl2 = "0.34.5"

# hentai = "0.2.2"
directories-next = "2.0.0"

reqwest = "0.11.4"
select = "0.6.0-alpha.1"
url = "2.2.2"

http-serde = "1.0.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_with = { version = "1.9.4", features = ["json", "macros"] }

chrono = { version = "0.4.19", features = ["serde"] }
# futures = "0.3.15"
# tokio_schedule = "0.3.0" # https://docs.rs/tokio_schedule/0.3.0/tokio_schedule/
[dependencies.tokio]
features = ["fs", "time", "net", "macros", "rt-multi-thread"]
version = "1.7.1"

[dependencies.piston_window]
default-features = false
version = "0.120.0"
[dependencies.pistoncore-sdl2_window]
git = "https://github.com/PistonDevelopers/sdl2_window"
path = "../sdl2_window"

# [target.'cfg(target_os = "linux")'.features]
# sdl2 = []
[target.'cfg(not(target_os = "linux"))'.features]
default = ["sdl2/bundled", "sdl2/use-vcpkg"]
