[package]
authors = ["simdimdim <simdimdim@gmail.com>"]
default-run = "main"
edition = "2018"
name = "pagepal"
resolver = "2"
version = "0.1.2"

[profile.release]
# debug = true

[package.metadata.vcpkg]
branch = "master"
dependencies = ["sdl2"]
git = "https://github.com/microsoft/vcpkg"
target = {x86_64-pc-windows-msvc = {triplet = "x64-windows-static-md"}}

[dependencies]
druid = "0.7.0"
image = "0.23.14"

# hentai = "0.2.2"
directories-next = "2.0.0"

reqwest = "0.11.4"
select = "0.6.0-alpha.1"
url = { version = "2.2.2", features = ["serde"] }

http-serde = "1.0.2"
serde = { version = "1.0.126", features = ["derive"] }
# serde_json = "1.0.64"
serde_traitobject = { version = "0.2.7", optional = true }
serde_with = { version = "1.9.4", features = ["macros"] }

chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.15"
# tokio_schedule = "0.3.0" # https://docs.rs/tokio_schedule/0.3.0/tokio_schedule/

[dependencies.tokio]
features = ["fs", "time", "net", "macros", "rt-multi-thread"]
version = "1.7.1"


[features]
default = []
trait_ojb_ser = ["serde_traitobject"]
